--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - sudo dpkg -i zlib1g-dev_1.2.8.dfsg-1ubuntu1_amd64.deb zlib1g_1.2.8.dfsg-1ubuntu1_amd64.deb
   - sudo apt-get install -f
 
-  - git clone --depth=50 https://github.com/notmuch/notmuch.git
+  - git clone --depth=50 https://github.com/notmuch/notmuch.git -b release
   - pushd notmuch
   - ./configure --prefix=/usr
   - sudo make install
