Automatically check formatting with gofmt.
We've apparently been slightly sloppy wrt using gofmt. Now we can't slip
that by Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ before_install:
   - sudo rm -rf notmuch
 # In addition to running the test suite, we should also make sure the example
 # builds.
-script: make test && cd example && go build
+script: make ci
