--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 go:
-  - 1.5
-  - 1.6
+  - 1.7
+  - 1.11
   - tip
 env:
   - notmuch_branch=release
@@ -15,16 +15,7 @@ before_install:
   - cat /etc/lsb-release
   - go get -u golang.org/x/tools/cmd/cover
   - sudo apt-get update -qq
-  - sudo apt-get install dtach libxapian-dev libgmime-2.6-dev libtalloc-dev python-sphinx ruby-dev
-
-  # Notmuch requires zlib 1.2.5.2, unfortunately travis runs on Ubuntu 12.04LTS which
-  # ships with zlib 1.2.3.3. We need to update to zlib 1.2.5.2 to be able to build.
-  # TODO: Watch https://github.com/travis-ci/travis-ci/issues/2046 and remove
-  #       this hack once travis-ci switches to Ubuntu 14.04
-  - wget 'https://github.com/notmuch/travis-files/raw/master/zlib1g-dev_1.2.8.dfsg-1ubuntu1_amd64.deb'
-  - wget 'https://github.com/notmuch/travis-files/raw/master/zlib1g_1.2.8.dfsg-1ubuntu1_amd64.deb'
-  - sudo dpkg -i zlib1g-dev_1.2.8.dfsg-1ubuntu1_amd64.deb zlib1g_1.2.8.dfsg-1ubuntu1_amd64.deb
-  - sudo apt-get install -f
+  - sudo apt-get install dtach libxapian-dev libgmime-3.0-dev libtalloc-dev python-sphinx ruby-dev zlib1g-dev
 
   - git clone --depth=50 https://github.com/notmuch/notmuch.git -b $notmuch_branch
   - pushd notmuch
