--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 before_script:
-  - apk add build-base notmuch
+  - apk add build-base notmuch curl
 test:go111:
   image: "golang:1.12.7-alpine3.10"
   script:
