CI: Switch over to debian golang images.
Alpine is based on musl libc, which doesn't work with the race detector:

    https://groups.google.com/forum/#!topic/golang-nuts/WnfKCoaRP_E

The notmuch package on debian is much more out of date, so we'll
probably have to go back to building it from source -- let's give this a
shot though.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 before_script:
-  - apk add build-base notmuch notmuch-dev curl
+  - apt-get update && apt-get install -y build-essential notmuch notmuch-dev curl
 test:go111:
-  image: "golang:1.12.7-alpine3.10"
+  image: "golang:1.12.7-stretch"
   script:
     - make ci
 test:go112:
-  image: "golang:1.11.12-alpine3.10"
+  image: "golang:1.11.12-stretch"
   script:
     - make ci
